Condensed and generalized projections code, and added sport param to draftkings
