# src/main/java/handler/DraftKingsHandler.java
@@ -9,8 +9,9 @@ import java.util.Map;
 
 public class DraftKingsHandler {
     public List<Map<String, Object>> handleRequest(Map<String, String> input) {
+        String sport = input.get("sport");
         DataCollector dataCollector = new DataCollector(new ApiCaller());
-        DraftKingsData draftKingsData = new DraftKingsData(dataCollector);
+        DraftKingsData draftKingsData = new DraftKingsData(dataCollector, sport);
         return draftKingsData.getAllContestData();
     }
 }
