# swagger.yaml
@@ -9,9 +9,14 @@ paths:
   /draftkings:
     get:
       consumes:
-      - "application/json"
+        - "application/json"
       produces:
-      - "application/json"
+        - "application/json"
+      parameters:
+        - name: "sport"
+          in: "query"
+          required: false
+          type: "string"
       responses:
         200:
           description: "200 response"
@@ -21,7 +26,7 @@ paths:
             Access-Control-Allow-Origin:
               type: "string"
       x-amazon-apigateway-integration:
-        uri: 
+        uri:
           Fn::Sub: "arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${GetDraftKingsDataFunction.Arn}/invocations"
         responses:
           default:
@@ -30,6 +35,8 @@ paths:
               method.response.header.Access-Control-Allow-Origin: "'*'"
         passthroughBehavior: "when_no_templates"
         httpMethod: "POST"
+        requestTemplates:
+          application/json: "{\n\"sport\": \"$input.params('sport')\"\n}"
         contentHandling: "CONVERT_TO_TEXT"
         type: "aws"
   /fanduel:
